--- a/C6Events/app/src/main/res/menu/navigation.xml
+++ b/C6Events/app/src/main/res/menu/navigation.xml
@@ -3,20 +3,20 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/home_black"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_explore"
-        android:icon="@drawable/ic_search_black_24px"
+        android:icon="@drawable/explore_black"
         android:title="@string/title_explore" />
     <item
-        android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_supervisor_account_black_24px"
+        android:id="@+id/navigation_connect"
+        android:icon="@drawable/connect_black"
         android:title="@string/title_profile" />
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_settings_black_24px"
+        android:icon="@drawable/settings_black"
         android:title="@string/title_settings" />
 
 </menu>
