--- a/C6Events/app/src/main/res/menu/navigation.xml
+++ b/C6Events/app/src/main/res/menu/navigation.xml
@@ -13,7 +13,7 @@
     <item
         android:id="@+id/navigation_connect"
         android:icon="@drawable/connect_black"
-        android:title="@string/title_profile" />
+        android:title="@string/title_connect" />
     <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/settings_black"
