--- a/C6Events/app/src/main/res/layout/activity_home_page.xml
+++ b/C6Events/app/src/main/res/layout/activity_home_page.xml
@@ -23,7 +23,12 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/title_home"
-            android:textSize="48sp"/>
+            android:textSize="48sp"
+            android:textStyle="bold|italic"
+            android:textColor="#673AB7"
+            android:background="FFFFFF"/>
+            <!--android:textAppearance="?android:textAppearanceLarge" -->
+
 
     </FrameLayout>
 
