--- a/C6Events/app/src/main/res/layout/activity_home_page.xml
+++ b/C6Events/app/src/main/res/layout/activity_home_page.xml
@@ -17,16 +17,18 @@
         <TextView
             android:id="@+id/message"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:background="#FFFFFF"
             android:text="@string/title_home"
+            android:textColor="#673AB7"
             android:textSize="48sp"
             android:textStyle="bold|italic"
-            android:textColor="#673AB7"
-            android:background="FFFFFF"/>
+            android:textAlignment="center"
+            android:visibility="visible" />
             <!--android:textAppearance="?android:textAppearanceLarge" -->
 
 
