--- a/C6Events/app/src/main/res/layout/activity_home_page.xml
+++ b/C6Events/app/src/main/res/layout/activity_home_page.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="joneilstarkie.c6events.HomePage">
+    tools:context="joneilstarkie.c6events.MainActivity">
 
     <FrameLayout
         android:id="@+id/content"
@@ -14,7 +15,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <TextView
+       <!--<TextView
             android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="200dp"
@@ -22,15 +23,15 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="#FFFFFF"
+            android:background="@color/homePageBackgroundColour"
             android:text="@string/title_home"
-            android:textColor="#673AB7"
+            android:textColor="@color/homePageTextColour"
             android:textSize="48sp"
             android:textStyle="bold|italic"
             android:textAlignment="center"
             android:visibility="visible" />
-            <!--android:textAppearance="?android:textAppearanceLarge" -->
-
+            &lt;!&ndash;android:textAppearance="?android:textAppearanceLarge" &ndash;&gt;
+-->
 
     </FrameLayout>
 
